    [package]
    name = "nextcloud-rsync"
    version = "0.1.0"
    authors = ["tallie5"]

    [dependencies]
    base64 = "0.12.0"
    chrono = "0.4.11"
    curl = "0.4.28"
    fxhash = "0.2.1"
    md5 = "0.7.0"
    openssl = "0.10.28"
    percent-encoding = "2.1.0"
    quick-xml = "0.18.1"
    rayon = "1.3.0"
    rpassword = "4.0.5"
    url = "2.1.1"
    walkdir = "2.3.1"
